--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
+    "mapbox-gl": "^3.11.1",
     "moment": "^2.30.1",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-big-calendar": "^1.18.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.5.3"
   },
